Work in progress: refactoring library for stable release